--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -598,3 +598,311 @@ aside .pages{
     z-index: 2;
     background: #d3c9c1;
 }
+.w-33{
+    width: 33.333333%;
+}
+.w-50{
+    width: 50%;
+}
+
+
+/*<!-- ========== end of 1.1 header section ========== -->
+<!-- ========== 1.2 main section ========== -->/*/
+.hero{
+    background-image: url('images/hero.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 172px 0 279px 0;
+}
+
+.hero .container{
+    position: relative;
+}
+
+.hero h1{
+    color: #fff;
+    letter-spacing: 3.75px;
+    text-transform: uppercase;
+}
+
+.hero-social-icon{
+    position: absolute;
+    left: 0;
+    top: 0;
+    flex-direction: column !important;
+    justify-content: center !important;   
+}
+
+.hero-social-icon a{
+    padding: 16px 38px 16px 38px !important;
+}
+
+.hero-social-icon a i{
+    font-size: 26px;
+    background: linear-gradient(0deg, #f54a48 0.5%, #fa982f 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.hero-social-icon hr{
+    display: block;
+    margin-top: 68px;
+    opacity: 1;
+    color: #fff;
+    width: 110px;
+    rotate: 90 deg;
+}
+
+.center-data h3{
+    color: #fff;
+    text-transform: uppercase;
+}
+
+/* btn_hover2 button effect for reuse */
+.btn_hover2{
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+    border-radius: 58px;
+    border: 1.5px solid #d12bec;
+    color: #fff;
+    z-index: 1;
+    letter-spacing: 0.8px;
+}
+
+.btn_hover2::before{
+    content: '';
+    border-radius: 50px;
+    position: absolute;
+    width: 0%;
+    height: 100%;
+    transition: all 0.3s ease-in;
+    background: linear-gradient(180deg, #ff7527 0%, #fabf28 100%);
+    z-index: -1;
+    top: 0;
+    left: 0;
+}
+
+.btn_hover2:hover::before{
+    width: 100%;
+    border-radius: 50px;
+    background: linear-gradient(180deg, #ff7527 0%, #fabf28 100%);
+
+}
+
+.center-btn a{
+    padding: 16px 38px 16px 38px;
+}
+
+/*<!-- ========== end of 1.2 hero section ========== -->
+<!-- ========== 1.3 card section ========== -->/*/
+.feature{
+    background-color: #150725;
+    margin-bottom: 1px;
+    position: relative;
+}
+
+.feature .flex{
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    display: flex;
+    margin-top: calc(-1 * var(--bs-gutter-y));
+    margin-right: calc(-.5* var(--bs-gutter-x));
+}
+
+.header-card{
+    margin-top: -145px;
+    display: flex;
+    flex: 0 0 auto;
+    width: 25%;
+    padding-right: calc(var(--bs-gutter-x) * .5);
+    padding-left: calc(var(--bs-gutter-x) * .5);
+}
+
+.header-card div{
+    border-radius: 20px;
+    background: linear-gradient(0deg, #471133 0%, #140921 100%);
+    color: #fff;
+    padding: 40px 30px;
+    transition: all 0.4s ease;
+}
+
+.header-card div:hover{
+    transform: scale(1.05);
+    transition: all 0.4s ease;
+}
+
+.header-card .figure_img1{
+    width: 53px;
+}
+
+.header-card img{
+    width: 60px;
+}
+
+.header-card h4{
+    width: 146px;
+    letter-spacing: 1.1px;
+    text-transform: uppercase;
+    margin: 20px 0 12px 0;
+}
+/*<!-- ========== end of 1.3 card section ========== -->
+<!-- ========== 1.4 logoipsum section ========== -->  */
+
+.logoipsum{
+    background-color: #150725;
+    padding: 150px 0;
+    margin-top: -1px;
+}
+
+.logoipsum-slider{
+    margin-top: 24px;
+}
+
+.logoipsum h3{
+    letter-spacing: 1.25px;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.logoipsum img{
+    width: 170px;
+    margin: 0 auto;
+}
+
+.logoipsum .hr1{
+    opacity: 1;
+    height: 2px;
+    width: 60px;
+    rotate: 90 deg;
+    margin: 0 auto 50px auto;
+    background-color: rgba(255, 255, 255, 0.75);
+}
+.logoipsum .hr2{
+    opacity: 1;
+    height: 2px;
+    width: 60px;
+    rotate: 90 deg;
+    margin: 70px auto 0 auto;
+    background-color: rgba(255, 255, 255, 0.75);
+}
+/*<!-- ========== end of 1.4 logoipsum section ========== -->
+<!-- ========== 1.5 about us section ========== --> */
+.about{
+    background-color: #3d0541;
+    padding: 100px 0;
+}
+
+.about-data{
+    display: flex;
+    margin-top: calc(-1 * var(--bs-gutter-y));
+    margin-right: calc(-1* var(--bs-gutter-x));
+    margin-left: calc(-1* var(--bs-gutter-x));
+}
+
+.about hr{
+    opacity: 1.25;
+    height: 1px;
+    color: #b520a3;
+    width: 60px;
+    border: 1px solid;
+}
+
+.about-data h2{
+    margin: 20px 0;
+    color: #fff;
+}
+
+.about h5{
+    color: #fff;
+    font-weight: 400;
+    font-family: 'barlow', sans-serif;
+}
+.about p{
+    color: #fff;
+}
+.about i{
+    border: 2px solid #fa982f;
+    border-radius: 50%;
+    padding: 3px;
+    font-size: 20px;
+    background: linear-gradient(66deg, #f54a48 0.87%, #fa982f 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.about-data a{
+    padding: 16px 38px 16px 38px !important;
+}
+
+.about-imgs{
+    position: relative;
+    background-image: url('../images/bg/about-bg.jpg');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.about-imgs figure{
+    background: linear-gradient(42deg, #7436bb 0.01%, #b520a3 100%);
+    width: fit-content;
+    clip-path: circle(45% at 50% 50%);
+    transition: all 0.8s ease;
+}
+
+.about-imgs figure:hover{
+    transform: scale(1.05);
+    transition: all 0.8s ease;
+}
+
+.about-imgs img{
+    width: 85%;
+    display: block;
+    margin: auto;
+    clip-path: circle(45% at 50% 50%);
+}
+
+.ab-count{
+    flex-direction: column;
+    text-align: center;
+    background: linear-gradient(180deg, #ff7525 0%, #fabf28 100%);
+    columns: #fff;
+    position: absolute;
+    bottom: -18px;
+    left: 118px;
+    border-radius: 50%;
+    width: 175px;
+    height: 175px;
+}
+
+.ab-count h2{
+    margin: 0;
+}
+
+.about-hr{
+    color: #fff;
+    position: absolute;
+    right: -50px;
+    bottom: 25px;
+    rotate: -90 deg;
+}
+
+.about-hr hr{
+    opacity: 1.25;
+    height: 1px;
+    border: 1px solid #b520a3;
+    width: 60px;
+}
+
+.ab-count p{
+    font-size: 18px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.ab-count h6{
+    letter-spacing: 3.72px;
+    text-transform: uppercase;
+}
