--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -382,7 +382,7 @@ nav li a.active,
 .nav-right .fa-bars {
     color: #ffffff;
     font-size: 22px;
-    /* background-color: #150803; */
+    background-color: #150803;
     padding: 7px 8px;
     border-radius: 50%;
     cursor: pointer;
@@ -1238,6 +1238,9 @@ aside .pages {
     border: 1px solid;
 }
 
+.portfo-center p {
+    text-align: justify;
+}
 
 .portfolio-1 .btn_hover2 {
     padding: 15px 30px;
@@ -1257,6 +1260,11 @@ aside .pages {
     padding-bottom: 120px;
     position: relative;
     z-index: 1;
+}
+
+.bigger-heading {
+    font-size: 70px; /* Adjust the font size as needed */
+    font-weight: bold; /* Optionally adjust font weight */
 }
 
 .gallary img {
@@ -1793,7 +1801,6 @@ aside .pages {
     position: relative;
     background-repeat: no-repeat;
     height: 500px;
-/*     max-height: fit-content; */
 }
 
 .team-img img {
@@ -2225,7 +2232,6 @@ footer form button:hover {
 
 .footer-menu ul li a:hover {
     color: #f54a48;
-    /* text-transform: lowercase; */
 }
 
 .footer-menu i {
@@ -2265,7 +2271,6 @@ footer form button:hover {
     text-transform: lowercase;
 
 }
-
 .copyright {
     background: #150725;
     color: #ffffff;
@@ -2312,42 +2317,6 @@ footer form button:hover {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* button back to top */
 
 #backToTopBtn {
@@ -2377,4 +2346,10 @@ footer form button:hover {
 ::-webkit-scrollbar-thumb {
     background: linear-gradient(42deg, #7436bb 0.01%, #b520a3 100%);
     border-radius: 5px;
+}
+
+/* LOG OUT BUTTON */
+#_logout {
+    margin-top: 55%;
+    width: 100%;
 }
