--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -573,6 +573,7 @@ aside {
     position: absolute;
     width: 100%;
     height: 100%;
+    color: #ffff;
     transition: all 0.3s ease-in;
     background: linear-gradient(42deg, #7436bb 0.01%, #b520a3 100%);
     z-index: -1;
@@ -580,9 +581,14 @@ aside {
     right: 0;
 }
 
+.btn_hover1:hover {
+    color: #ffffff;
+
+}
+
 .btn_hover1:hover::before {
     width: 0;
-    background: linear-gradient(42deg, #7436bb 0.01%, #b520a3 100%);
+    background: linear-gradient(42deg, #a95fff 0.01%, #b520a3 100%);
 }
 
 .sidebar button:hover {
@@ -1126,11 +1132,11 @@ aside .pages {
 }
 
 .about i {
-    border: 2px solid #fa982f;
+    border: 2px solid #b520a3;
     border-radius: 50%;
     padding: 3px;
     font-size: 20px;
-    background: linear-gradient(66.75deg, #440a3f 0.87%, #630a57 100%);
+    background: linear-gradient(66.75deg, #ffd001 0.87%, #63440a 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -2428,14 +2434,14 @@ footer form button:hover {
 
 .footer-menu i {
     font-size: 20px;
-    background: linear-gradient(0deg, #f54a48 0.5%, #fa982f 100%);
+    background: linear-gradient(0deg, #d248f5 0.5%, #4d0550 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     margin-right: 10px;
 }
 
 .footer-menu i:hover {
-    background: linear-gradient(0deg, #f54a48 0.5%, #f54a48 100%);
+    background: linear-gradient(0deg, #d248f5 0.5%, #4d0550 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
