--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -509,7 +509,7 @@ nav li a.active,
 /* Sidebar */
 
 aside {
-    background-color: #3d0f41;
+    background-color: #d3c9c1;
     z-index: 10;
 }
 
@@ -889,6 +889,21 @@ aside .pages {
     margin-top: 2rem;
 }
 
+@media (max-width: 800px) {
+    .hero h1 {
+        font-size: 10px;
+        margin-bottom: -10px;
+    
+    }
+}
+
+@media (max-width: 1400px) {
+    .hero h1 {
+        font-size: 150px;
+        margin-bottom: -10px;
+    
+    }
+}
 /* button hover with background */
 
 .btn_hover2 {
@@ -952,36 +967,37 @@ aside .pages {
 /* ====== 1.3. card section ====== */
 
 .feature {
-    background-color: #090118;
-    margin-top: -1px;
+    background-color: #080214;
+    margin-top: -10px;
     position: relative;
 }
 
 .feature .flex {
-    --bs-gutter-x: 1.5rem;
+    --bs-gutter-x: 4rem;
     --bs-gutter-y: 0;
     display: flex;
     margin-top: calc(-1 * var(--bs-gutter-y));
-    margin-right: calc(-.5 * var(--bs-gutter-x));
+    margin-right: calc(-.10 * var(--bs-gutter-x));
 }
 
 .header-card {
-    margin-top: -145px;
+    margin-top: -125px;
     display: flex;
     flex: 0 0 auto;
     width: 25%;
     padding-right: calc(var(--bs-gutter-x) * .5);
     padding-left: calc(var(--bs-gutter-x) * .5);
+    margin-bottom: 40px;
 }
 
 .header-card div {
-    border-radius: 20px;
+    border-radius: 50px;
     background: linear-gradient(0deg, #261147 0%, #140921 100%);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1), inset 0 0 10px rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(11.7px);
     -webkit-backdrop-filter: blur(20px);
     color: #ffffff;
-    padding: 40px 30px;
+    padding: 40px 40px;
     transition: all 0.4s ease;
 }
 
@@ -990,12 +1006,13 @@ aside .pages {
     transition: all 0.4s ease;
 }
 
-.header-card .feature-img1 {
-    width: 53px;
-}
 
 .header-card img {
     width: 60px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    justify-items: center;
 }
 
 .header-card h4 {
@@ -1005,41 +1022,50 @@ aside .pages {
     margin: 20px 0 12px 0;
 }
 
+@media (max-width: 1000px) {
+
 /* Apply different padding to each card */
 .header-card:nth-child(1) {
-    padding: 190px 70px; /* Adjust as needed */
+    padding: 0px 50px;
+    margin-bottom: 230px;
 }
 
 .header-card:nth-child(2) {
     padding: 0px 50px; /* Adjust as needed */
+    margin-bottom: 100px;
 }
 
 .header-card:nth-child(3) {
     padding: 0px 50px; /* Adjust as needed */
+    margin-bottom: 100px;
 }
 
 .header-card:nth-child(4) {
     padding: 0px 50px; /* Adjust as needed */
+    margin-bottom: 100px;
 }
 
-/* Responsive Styling */
-@media (max-width: 768px) {
     .header-card {
-        width: 50%;
-        padding: 0 10px; /* Adjust padding as needed */
+        width: 100%;
+        margin-bottom: 100px; /* Add space between cards */
+        padding: 0px 50px;
+        margin-bottom: 230px;
     }
 
     .header-card h4 {
         width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .header-card .feature-img1 {
+        width: 60px;
+    }
+    .header-card img{
+    display: block;
+    margin: 0 auto; /* Center horizontally */
     }
 }
 
-@media (max-width: 576px) {
-    .header-card {
-        width: 100%;
-        padding: 0 10px; /* Adjust padding as needed */
-    }
-}
 
 /* ====== End of 1.3. card section ====== */
 
@@ -1048,11 +1074,11 @@ aside .pages {
 .logoipsum {
     background-color: #150725;
     padding: 150px 0;
-    margin-top: -1px;
+    margin-top: -10px;
 }
 
 .logoipsum-slider {
-    margin-top: 24px;
+    margin-top: -30px;
 }
 
 .logoipsum h3 {
@@ -1062,8 +1088,8 @@ aside .pages {
 }
 
 .logoipsum img {
-    width: 170px;
-    margin: 0 auto;
+    width: 200px;
+    margin: 0 auto 10px;
 }
 
 .logoipsum .hr1 {
@@ -1071,7 +1097,7 @@ aside .pages {
     height: 2px;
     rotate: 90deg;
     width: 60px;
-    margin: 0 auto 50px auto;
+    margin: 0 auto 10px auto;
     background: rgba(255, 255, 255, 0.75);
 }
 
@@ -1512,6 +1538,8 @@ aside .pages {
     color: #d3c9c1;
     position: relative;
     margin-bottom: 15px;
+    text-align: center;
+    font-size: 20px;
 }
 
 .service-1 .service-hr1 {
@@ -1538,8 +1566,10 @@ aside .pages {
 .service-card {
     background: linear-gradient(11deg, #0d011b 0.01%, #31072c 100%);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1), inset 0 0 10px rgba(0, 0, 0, 0.2);
-    padding: 40px 40px 30px 40px;
+    padding: 5px 40px 50px 40px;
     width: 100%;
+    flex-direction: column;
+    align-items: center; /* Center horizontally */
 }
 
 .service-card:hover {
@@ -1564,12 +1594,16 @@ aside .pages {
     margin: 20px 0;
     color: #ffffff;
     letter-spacing: 1.25px;
+    margin-bottom: -30px;
+    text-align: center;
+    font-size: 40px;
 }
 
 .service-card img {
     object-fit: cover;
-    margin: auto;
     display: block;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .service-card figure {
@@ -1579,9 +1613,13 @@ aside .pages {
     padding: 12px;
     width: 124px;
     height: 85px;
+    margin-bottom: -40px;
     display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
 }
 
+/* Adjustments for specific slider images */
 .service-card img[alt="slider1"] {
     width: 105px;
 }
@@ -1592,6 +1630,12 @@ aside .pages {
 
 .service-card img[alt="slider3"] {
     width: 60px;
+}
+
+.service-card img img{
+    align-items: center;
+    align-self: center;
+    align-content: center;
 }
 
 /* ====== End of 1.7. Services section ====== */
@@ -2328,6 +2372,23 @@ aside .pages {
     -webkit-text-fill-color: transparent;
 }
 
+/* ====== 1.13. Blogs section ====== */
+
+.blog p {
+    color: #d3c9c1;
+}
+
+@media screen and (max-width: 1000px) {
+    .blog p {
+        padding: 0 20px;
+        text-align: center;
+    }
+}
+
+
+
+
+
 /* ====== End of 1.13. Blogs section ====== */
 
 /* ====== 1.14. Footer section ====== */
@@ -2348,15 +2409,16 @@ footer {
 }
 
 .footer-hr h3 {
-    margin-top: 125px;
+    margin-top: 115px;
     color: #ffffff;
     letter-spacing: 1px;
+    margin-bottom: -20px;
 }
 
 .footer-hr p {
     color: #ffffff;
     padding: 0 300px;
-    margin: 20px 0 30px 0;
+    margin: -10px 0 30px 0;
 }
 
 .footer-hr hr {
@@ -2480,38 +2542,8 @@ footer form button:hover {
     color: #ffffff;
 }
 
-/* ====== End of 1.14. Footer section ====== */
 
 
-/* ====== End of 6.1. 404 / Coming Soon page ====== */
-
-.coming-soon {
-    background: linear-gradient(0deg, #471133 0%, #0b0314 100%);
-    color: #ffffff;
-    min-height: 100vh;
-}
-
-.coming-soon img {
-    width: 100%;
-}
-
-.coming-soon h2 {
-    color: #ffc300;
-    margin-top: -55px;
-}
-
-.coming-soon p {
-    padding: 0 348px;
-}
-@media screen and (max-width: 1140px) {
-     /* ====== 404.html / Coming.html ====== */
-     .coming-soon p {
-        padding: 0 50px;
-    }
-    .coming-soon img {
-        width: 80%;
-    }
-}
 
 
 /* button back to top */
