--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1069,30 +1069,30 @@ aside .pages {
 
 /* ====== End of 1.3. card section ====== */
 
-/* ====== 1.4. logoipsum section ====== */
+/* ====== 1.4. logo section ====== */
 
-.logoipsum {
+.logo {
     background-color: #150725;
     padding: 150px 0;
     margin-top: -10px;
 }
 
-.logoipsum-slider {
+.logo-slider {
     margin-top: -30px;
 }
 
-.logoipsum h3 {
+.logo h3 {
     letter-spacing: 1.25px;
     color: #ffffff;
     text-transform: uppercase;
 }
 
-.logoipsum img {
+.logoimg {
     width: 200px;
     margin: 0 auto 10px;
 }
 
-.logoipsum .hr1 {
+.logo .hr1 {
     opacity: 1;
     height: 2px;
     rotate: 90deg;
@@ -1101,7 +1101,7 @@ aside .pages {
     background: rgba(255, 255, 255, 0.75);
 }
 
-.logoipsum .hr2 {
+.logo .hr2 {
     opacity: 1;
     height: 2px;
     rotate: 90deg;
